# RVEtool

./: CMakeLists.txt  README.md
RVE_mesher/: CMakeLists.txt
RVE_mesher/src/: main.py  main2D.py  main3D.py
RVE_mesher/src/Mesher2D/: Mesher2D.py
RVE_mesher/src/Mesher3D/: Mesher3D.py
RVE_solver/: README.md
RVE_solver/src/: main.py
RVE_solver/src/Writers/: WriteAlyaDat.py  WriteAlyaSld.py
cmake/: gmsh.cmake
tools/: genAlyaBouRVE.py  genAlyaPerRVE.py  genAlyaSetRVE.py  opeAlyaRVE.py
